--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cy:run": "cypress run --browser chrome",
     "cy:open:docker": "cypress open --config-file cypress/config/appSettingsDocker.json",
     "cy:open:local": "cypress open --config-file cypress/config/appSettingsLocal.json",
+    "cy:open:heroku": "cypress open --config-file cypress/config/appSettingsHeroku.json",
     "cy:run:docker": "cypress run --config-file cypress/config/appSettingsDocker.json",
-    "cy:run:local": "cypress run --config-file cypress/config/appSettingsLocal.json"
+    "cy:run:local": "cypress run --config-file cypress/config/appSettingsLocal.json",
+    "cy:run:heroku": "cypress run --config-file cypress/config/appSettingsHeroku.json"
   },
   "repository": {
     "type": "git",
